mini-bar is in progress

--- a/index.html
+++ b/index.html
@@ -2,8 +2,21 @@
 <html>
 <head>
 	<title></title>
+	<!-- CSS -->
+	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+	<!-- JS -->
+	<script type="text/javascript" src="js/index.js"></script>
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+	<!-- jQuery library -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body>
-	
+	<!-- Mini-Bar -->
+		<div id="mini-bar">
+		<div class="container-fluid">
+			<p id="mini-bar-items">+92 300 28164028</p>
+		</div>
+	</div>
 </body>
 </html>
