navbar under working

--- a/index.html
+++ b/index.html
@@ -4,19 +4,46 @@
 	<title></title>
 	<!-- CSS -->
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
-	<!-- JS -->
-	<script type="text/javascript" src="js/index.js"></script>
-	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-	<!-- jQuery library -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<!-- Latest BootStrap -->
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<!-- jQuery -->
+	<script type="text/javascript" src="js/jquery.min.js"></script>
+  	<!-- JS -->
+	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 </head>
 <body>
 	<!-- Mini-Bar -->
-		<div id="mini-bar">
+	<div id="mini-bar">
 		<div class="container-fluid">
-			<p id="mini-bar-items">+92 300 28164028</p>
+			<p class="mini-bar-items" id="mini-bar-item-padding"><span class="glyphicon glyphicon-earphone"></span> 923462555181</p>
+			<p class="mini-bar-items"><span class="glyphicon glyphicon-envelope"></span>   sosttikarachi@sos.org.pk</p>
 		</div>
 	</div>
+	<!-- NabBar -->
+<div class="clearfix"></div>
+	<nav class="navbar navbar-default">
+		<div class="container-fluid" >
+			<div class="navbar-header" >
+				<button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#abc">
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a href="#" class="navbar-brand">Learn Bootstrap</a>
+			</div>
+			<div class="collapse navbar-collapse" id="abc">
+			<ul class="nav navbar-nav">
+				<li><a href="#">HOME</a></li>
+				<li><a href="#">HOME</a></li>
+				<li><a href="#">HOME</a></li>
+				<li><a href="#">HOME</a></li>
+			</ul>
+			<ul class="nav navbar-nav navbar-right">
+				<li><a href="#">Registeration</a></li>
+				<li><a href="#">Login</a></li>
+			</ul>
+			</div>
+		</div>
+	</nav>
 </body>
 </html>
