--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
 	<title></title>
+	<!-- ################################### Links ######################################## -->
 	<!-- CSS -->
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+	</style>
 	<!-- Latest BootStrap -->
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<!-- jQuery -->
@@ -12,38 +14,109 @@
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 </head>
 <body>
-	<!-- Mini-Bar -->
-	<div id="mini-bar">
-		<div class="container-fluid">
-			<p class="mini-bar-items" id="mini-bar-item-padding"><span class="glyphicon glyphicon-earphone"></span> 923462555181</p>
-			<p class="mini-bar-items"><span class="glyphicon glyphicon-envelope"></span>   sosttikarachi@sos.org.pk</p>
-		</div>
+	<!-- ################################### MiniBar ######################################## -->
+	<div class="container-fluid mini-bar">
+		<div class="row">
+			<div class="col-md-12">
+				<p class="mini-bar-items">
+					<span class="glyphicon glyphicon-envelope"></span>  sosttikarachi@sos.org.pk
+					<span class="glyphicon glyphicon-earphone" id="mini-bar-item-padding"></span> 
+					+92 346 2555181
+				</p>
+			</div>
+		</div>	
 	</div>
 	<!-- NabBar -->
-<div class="clearfix"></div>
-	<nav class="navbar navbar-default">
+	<nav class="navbar navbar-defualt nav-bar-customization">
 		<div class="container-fluid" >
 			<div class="navbar-header" >
-				<button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#abc">
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
+				<a href="#" class="navbar-brand nav-bar-item-color">SOS Techincal and Traning Institue</a>
+				<button class="navbar-toggle nav-bar-item-color collapsed btn-color" data-toggle="collapse" data-target="#abc">
+					<span class="icon-bar btn-bar-color"></span>
+					<span class="icon-bar btn-bar-color"></span>
+					<span class="icon-bar btn-bar-color"></span>
 				</button>
-				<a href="#" class="navbar-brand">Learn Bootstrap</a>
 			</div>
 			<div class="collapse navbar-collapse" id="abc">
-			<ul class="nav navbar-nav">
-				<li><a href="#">HOME</a></li>
-				<li><a href="#">HOME</a></li>
-				<li><a href="#">HOME</a></li>
-				<li><a href="#">HOME</a></li>
-			</ul>
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="#">Registeration</a></li>
-				<li><a href="#">Login</a></li>
+				<li class="nav-bar-padding"><a href="#" class="nav-bar-item-color nav-bar-item-color-hover">HOME</a></li>
+				<li class="nav-bar-padding"><a href="#" class="nav-bar-item-color nav-bar-item-color-hover">About Us</a></li>
+				<li class="nav-bar-padding"><a href="#" class="nav-bar-item-color nav-bar-item-color-hover">Accredition</a></li>
+				<li class="nav-bar-padding"><a href="#" class="nav-bar-item-color nav-bar-item-color-hover">Managing Comitee</a></li>
+				<li class="nav-bar-padding"><a href="#" class="nav-bar-item-color nav-bar-item-color-hover">Admission</a></li>
+				<li class="nav-bar-padding"><a href="#" class="nav-bar-item-color nav-bar-item-color-hover">Contacts</a></li>
+				<li class="nav-bar-padding"><a href="#" class="nav-bar-item-color nav-bar-item-color-hover">Blogs</a></li>
 			</ul>
 			</div>
 		</div>
 	</nav>
+	<!-- ################################### Slider ######################################## -->
+	<slider>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-sm-12">
+				<div id="my-slider" class="carousel slid" data-ride="carousel">	
+					<!-- indicator dot nav -->
+					<ol class="carousel-indicators">
+						<li data-target="#my-slider" data-slide-to="0" class="active"></li>
+						<li data-target="#my-slider" data-slide-to="1"></li>
+						<li data-target="#my-slider" data-slide-to="2"></li>	
+					</ol>
+					<!-- wrapper for slider -->
+					<div class="carousel-inner" role="listbox">
+						<div class="item active">
+							<img src="images/2.jpg">
+							<div class="carousel-caption">
+							</div>
+						</div>
+						<div class="item">
+							<img src="images/3.jpg">
+							<div class="carousel-caption">
+							</div>
+						</div>
+						<div class="item">
+							<img src="images/1.jpg">
+							<div class="carousel-caption">
+							</div>
+						</div>
+					</div>
+					<!-- control next and pre -->
+					<a class="left carousel-control" href="#my-slider" role="button" data-slide="prev">
+						<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+						<span class="sr-only">Previous</span>
+					</a>
+					<a class="right carousel-control" href="#my-slider" role="button" data-slide="next">
+						<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+						<span class="sr-only">Next</span>
+					</a>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+
+
+
+
+
+
+
+
+	<section style="height: 600px;">	
+	</section>
+
+
+
+
+
+
+
+
+	<!-- ################################### Footer ######################################## -->
+	<div class="copyright">
+		© 2019 SOS Techincal & Training Institue. All Rights Reserved.					
+	</div>
+
 </body>
 </html>
